--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "circular-check": "dpdm --tree --circular --warning ./**/*.{ts,tsx}",
     "format-check": "prettier --check ./**/*.{ts,tsx}",
     "eslint-check": "eslint . --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
@@ -43,6 +44,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "dpdm": "^3.9.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
