--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,11 +33,11 @@ jobs:
           urls: 'https://mizu.vercel.app'
           device: 'all'
 
-      # - name: Verify Lighthouse check results
-      #   uses: foo-software/lighthouse-check-status-action@master
-      #   with:
-      #     lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-      #     minAccessibilityScore: '95'
-      #     minBestPracticesScore: '95'
-      #     minPerformanceScore: '95'
-      #     minSeoScore: '95'
+      - name: Verify Lighthouse check results
+        uses: foo-software/lighthouse-check-status-action@master
+        with:
+          lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+          minAccessibilityScore: '95'
+          minBestPracticesScore: '95'
+          minPerformanceScore: '95'
+          minSeoScore: '95'
