--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,6 +26,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#54a0ff",
   "background_color": "#ffffff"
 }
