--- a/package.json
+++ b/package.json
@@ -99,9 +99,9 @@
     "coveragePathIgnorePatterns": [
       "src/utils",
       "src/index.tsx",
-      "src/reportWebVitals.ts",
+      "src/report-web-vitals.ts",
       "service-worker.ts",
-      "serviceWorkerRegistration.ts",
+      "service-worker-registration.ts",
       "setupTests.ts"
     ],
     "coverageThreshold": {
