--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@fontsource/inconsolata": "^4.5.6",
     "@fontsource/lato": "^4.5.8",
     "@fontsource/noto-sans-jp": "^4.5.10",
+    "@reduxjs/toolkit": "^1.8.3",
     "i18next": "^21.8.13",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.0",
+    "react-redux": "^8.0.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
